[package]
name = "toolset"
version = "0.2.0"
description = "开发者工具集（Windows 桌面端）"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 仅桌面端：用 rlib 让 bin 静态链接，产出 .exe（无 DLL 导出表）。
# 不用 cdylib —— 它会导出海量符号，触发旧 binutils(ld 8.1) 的
# “export ordinal too large” 错误。日后做移动端再按需加回 cdylib/staticlib。
name = "toolset_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
toolset-core = { path = "core" }

# SSH 终端工具（有状态、异步、长连接）：会话管理放本层，不进 core。
# 关键：russh 默认 crypto 后端是 aws-lc-rs（要 NASM/MSVC），这里改用纯 ring 后端，
# 保留 rsa（RSA 私钥认证）与 flate2（压缩），以契合 GNU 工具链、避免 NASM。
russh = { version = "0.61", default-features = false, features = ["ring", "rsa", "flate2"] }
russh-sftp = "2.3"
# 本地终端：ConPTY 拉起本机 shell（PowerShell / cmd）。纯 Rust + windows 绑定，契合 GNU 工具链。
portable-pty = "0.8"

# HTTP/WebSocket 客户端：绕过 webview 的 CORS、可设任意方法与请求头、看原始响应。
# 统一走 rustls（default-features=false），避开 openssl/native-tls，契合 GNU 工具链。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
http = "1"

dashmap = "6"
tokio = { version = "1", features = ["macros", "sync", "rt", "net", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# 体积/内存优化：压小 release 二进制
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

# RSA 生成密钥靠大数运算，dev(debug) 下极慢。仅给这些重计算依赖开满优化，
# 主体仍保持快速增量编译，让 dev 下生成密钥对接近 release 速度。
[profile.dev.package.num-bigint-dig]
opt-level = 3

[profile.dev.package.rsa]
opt-level = 3

[profile.dev.package.rand]
opt-level = 3

# 主密码解锁靠 Argon2id（默认 64MiB/t=3，本就刻意慢）。dev(debug) 下未优化要好几秒，
# 给 argon2 与其内核 blake2 开满优化，解锁回到 release 量级（约几百毫秒）。
[profile.dev.package.argon2]
opt-level = 3

[profile.dev.package.blake2]
opt-level = 3

