[package]
name = "toolset-core"
version = "0.2.0"
edition = "2021"
description = "工具集纯逻辑核心（无 GUI 依赖，可独立单测）"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
chrono-tz = "0.10"
base64 = "0.22"
percent-encoding = "2"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
regex = "1"
heck = "0.5"
croner = "3"
if-addrs = "0.13"
getrandom = "0.2"
# 加密工具（纯 Rust，RustCrypto + rsa）
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
chacha20poly1305 = "0.10"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
hex = "0.4"
zhconv = "0.4"
# SSH 工具的凭据保险箱：Argon2id 派生密钥（字段级 AES-GCM 复用上面的 aes-gcm）
argon2 = "0.5"
